--- a/index.html
+++ b/index.html
@@ -1,43 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Practica 4</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie-edge">
-	
-	
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-   
-	
-	
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Libre+Baskerville|Source+Code+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-		
-		<div id="divCaptura">
-		<h4>Mapa hola mundo</h4> 
-		<br>
-		<label>Latitud: </label>
-        <input id="latitud"  type="text" placeholder="Latitud">
-        <br><br>
-        <label>Longitud:</label>
-        <input id="longitud"  type="text" placeholder="Longitud">
-        <br>
-         <button id="btnok" type="button" class="btn btn-success" onClick="init()">Aceptar</button>
-		
-		</div>
-		<div class="mapParent">
-			<div id="map" style="width:90%; height: 90%; border: 1px solid blue;">
 
-			</div>
-		</div>
-	
+    <header class="site-header">
+        <div class="hero">
+            <div class="contenido-header">
+                <nav class="redes-sociales">
+                    <a href="http://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                    <a href="http://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                </nav>
+                <div class="informacion-evento">
+                    <div class="clearfix">
+                        <p class="ciudad"><a href="https://www.google.com/maps/place/Facultad+de+Ciencias+Qu%C3%ADmicas+e+Ingenier%C3%ADa/@32.5320768,-116.9682113,17z/data=!3m1!4b1!4m5!3m4!1s0x80d947c1a21e0cc3:0x38bb337fa215784c!8m2!3d32.5320723!4d-116.9660226"><i class="fas fa-globe-americas"></i></a> Tijuana, B.C. México</p>
+                    </div>
 
-	
-	<script src="app.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	
+                    <h1 class="nombre-sitio">
+                        Hephaestus Tech
+                    </h1>
+                    <p class="slogan">
+                        Forjamos el trueno con el que defiendes tu olimpo
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="barra">
+        <div class="contenedor clearfix">
+            <div class="logo">
+                <img src="img/hephaestusLogo.png" alt="Logo" heigth="" width="">
+            </div>
+
+            <div class="menu-movil">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <nav class="navegacion-principal">
+                <a href="#">Nosotros</a>
+                <a href="#">Sucursales</a>
+                <a href="#">Contacto</a>
+                <a href="#">Productos</a>
+
+            </nav>
+
+
+        </div>
+    </div>
+
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
