Avance Front End
ligero avance al proyecto

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </p>
     </section>
 
+
     <section class="programa">
         <div class="contenedor-video">
             <video autoplay loop muted poster="img/bg-video.jpg" width="100%" height="100%" class="video-rep">
@@ -120,9 +121,102 @@
 
     </section>
 
+    <section class="dueños contenedor seccion">
+        <h2>
+            Nosotros
+        </h2>
+        <ul class="lista-nosotros clearfix">
+            <li>
+                <div class="nosotros">
+                    <img src="img/chon.jpg" alt="No se encontro la foto" height="250" width="250">
+                    <p>Shung Li Chon</p>
+                </div>
+            </li>
+            <li>
+                <div class="nosotros">
+                    <img src="img/lorena.jpg" alt="No se encontro la foto" height="250" width="250">
+                    <p>Lorena Camacho</p>
+                </div>
+            </li>
+            <li>
+                <div class="nosotros">
+                    <img src="img/pica.jpg" alt="No se encontro la foto" height="250" width="250">
+                    <p>Luis Picazarri</p>
+                </div>
+            </li>
+        </ul>
+    </section>
 
+    <section class="precios seccion">
+        <h2>
+            Producto
+        </h2>
+        <div class="contenedor">
+            <ul class="lista-precios clearfix">
+                <li>
+                    <div class="tabla-precio">
+                        <h3>
+                            D.D.Alert
+                        </h3>
+                        <p class="numero">
+                            $600
+                        </p>
+                        <ul>
+                            <li><i class="fas fa-check"></i>Producto</li>
+                            <li><i class="fas fa-check"></i>Manual de usuario</li>
+                            <li><i class="fas fa-check"></i>Tecnico de instalación</li>
+                        </ul>
+                        <a href="#" class="button">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>
+                            SmartDoor
+                        </h3>
+                        <p class="numero">
+                            $800
+                        </p>
+                        <ul>
+                            <li><i class="fas fa-check"></i>Producto</li>
+                            <li><i class="fas fa-check"></i>Manual de usuario</li>
+                            <li><i class="fas fa-check"></i>Tecnico de instalación</li>
+                        </ul>
+                        <a href="#" class="button">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>
+                            Hush Little Mama
+                        </h3>
+                        <p class="numero">
+                            $750
+                        </p>
+                        <ul>
+                            <li><i class="fas fa-check"></i>Producto</li>
+                            <li><i class="fas fa-check"></i>Manual de usuario</li>
+                            <li><i class="fas fa-check"></i>Tecnico de instalación</li>
+                        </ul>
+                        <a href="#" class="button">Comprar</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
-
+    <section class="section">
+        <h2>
+            Testimoniales
+        </h2>
+        <div class="testimonial">
+            <blockquote>
+                <p>
+                    Gracias a D.D.Alert se ha visto reducida la cantidad de personas que detenemos con aliento alcoholico.
+                </p>
+            </blockquote>
+        </div>
+    </section>
 
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
