--- a/nosotros.html
+++ b/nosotros.html
@@ -19,6 +19,30 @@
 
 <body>
 
+    <header class="site-header">
+        <div class="hero">
+            <div class="contenido-header">
+                <nav class="redes-sociales">
+                    <a href="http://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                    <a href="http://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                    <a href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                </nav>
+                <div class="informacion-evento">
+                    <div class="clearfix">
+                        <p class="ciudad"><a href="https://www.google.com/maps/place/Facultad+de+Ciencias+Qu%C3%ADmicas+e+Ingenier%C3%ADa/@32.5320768,-116.9682113,17z/data=!3m1!4b1!4m5!3m4!1s0x80d947c1a21e0cc3:0x38bb337fa215784c!8m2!3d32.5320723!4d-116.9660226"><i class="fas fa-globe-americas"></i></a> Tijuana, B.C. México</p>
+                    </div>
+
+                    <h1 class="nombre-sitio">
+                        Hephaestus Tech
+                    </h1>
+                    <p class="slogan">
+                        Forjamos el trueno con el que defiendes tu olimpo
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="barra">
         <div class="contenedor clearfix">
             <div class="logo">
@@ -118,6 +142,9 @@
         window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
     </script>
     <script src="js/plugins.js"></script>
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
+    <script src="js/jquery.animateNumber.js"></script>
+    <script src="js/jquery.countdown.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
